namespace DataAccess;

public class WorkProfileRepo
{

}
