namespace Model;

public enum Priority
{
    Low,
    Medium,
    High

}
