using System;

namespace Model;

public class TimeInterval
{
    public DateTimeOffset StartDate {get; set;}

    public DateTimeOffset EndDate {get; set;}
}
