using System;

namespace Services;

public interface IUserTaskService
{

}
