namespace Services;

public class SchedulingAlgorithm
{

}
