using Microsoft.AspNetCore.Http;
using Microsoft.AspNetCore.Mvc;

namespace TeapotApi
{
    [Route("api/[controller]")]
    [ApiController]
    public class PlanningController : ControllerBase
    {
    }
}
